--- a/labs/lab01-intro.ipynb
+++ b/labs/lab01-intro.ipynb
@@ -61,7 +61,7 @@
         }
       },
       "outputs": [],
-      "execution_count": 1
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -140,7 +140,7 @@
           "execution_count": 2
         }
       ],
-      "execution_count": 2
+      "execution_count": null
     },
     {
       "metadata": {
@@ -184,7 +184,7 @@
           ]
         }
       ],
-      "execution_count": 3
+      "execution_count": null
     },
     {
       "metadata": {
@@ -273,7 +273,7 @@
           ]
         }
       ],
-      "execution_count": 5
+      "execution_count": null
     },
     {
       "metadata": {
@@ -347,7 +347,7 @@
           ]
         }
       ],
-      "execution_count": 6
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -408,7 +408,7 @@
           "execution_count": 7
         }
       ],
-      "execution_count": 7
+      "execution_count": null
     },
     {
       "metadata": {
@@ -439,7 +439,7 @@
           ]
         }
       ],
-      "execution_count": 8
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -466,6 +466,13 @@
       "cell_type": "code",
       "source": [
         "# Ex. 1 your code here\n",
+        "year_mag_pairs = []\n",
+        "\n",
+        "for i in range(len(quake_years)):\n",
+        "    year_mag_pairs.append((quake_years[i], quake_mags[i]))\n",
+        "\n",
+        "year_mag_pairs[:5]\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -476,10 +483,25 @@
         "ExecuteTime": {
           "end_time": "2025-12-31T20:09:06.428326Z",
           "start_time": "2025-12-31T20:09:06.426417Z"
+        },
+        "outputId": "5b4cf052-01a2-41c8-89de-be7600439f9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "outputs": [],
-      "execution_count": null
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(2026, 5.3), (2026, 5.3), (2026, 5), (2026, 5.3), (2026, 5.2)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ],
+      "execution_count": 12
     },
     {
       "metadata": {
@@ -512,7 +534,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tPKSt94QScbM",
-        "outputId": "0d17afb2-9a95-4b83-f3a4-4bad5fa5a22a"
+        "outputId": "33fdddb6-7c53-4162-d19d-1474c7d82b79"
       },
       "cell_type": "code",
       "source": [
@@ -545,10 +567,10 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 13
         }
       ],
-      "execution_count": 10
+      "execution_count": 13
     },
     {
       "cell_type": "markdown",
@@ -577,7 +599,7 @@
           "name": "#%%\n"
         },
         "id": "FgwPH8mTBH3v",
-        "outputId": "e597abd8-1c57-4922-8ff2-92588a3aac74",
+        "outputId": "06e246e3-1f26-4bd7-f237-0999f6233625",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
@@ -599,7 +621,7 @@
           "metadata": {}
         }
       ],
-      "execution_count": 11
+      "execution_count": 14
     },
     {
       "cell_type": "markdown",
