--- a/labs/lab04-graphs.ipynb
+++ b/labs/lab04-graphs.ipynb
@@ -181,11 +181,11 @@
           "end_time": "2024-01-02T02:05:15.546417Z",
           "start_time": "2024-01-02T02:05:15.534324Z"
         },
-        "id": "kAb8qrjeS-U9",
-        "outputId": "3d377ac2-70e6-4e5c-ac4a-834415fb4e2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kAb8qrjeS-U9",
+        "outputId": "3d377ac2-70e6-4e5c-ac4a-834415fb4e2a"
       }
     },
     {
@@ -261,12 +261,12 @@
           "end_time": "2024-01-02T02:05:15.637670Z",
           "start_time": "2024-01-02T02:05:15.553915Z"
         },
-        "id": "tqZkSUemS-VB",
-        "outputId": "8c3a3983-f27d-4fa1-dfa3-f44c396bc525",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 539
-        }
+        },
+        "id": "tqZkSUemS-VB",
+        "outputId": "8c3a3983-f27d-4fa1-dfa3-f44c396bc525"
       }
     },
     {
@@ -344,11 +344,11 @@
           "end_time": "2024-01-02T02:05:15.777158Z",
           "start_time": "2024-01-02T02:05:15.650682Z"
         },
-        "id": "RYeX7P1DS-VD",
-        "outputId": "98c6c102-8816-49b8-af59-837d7f303b45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RYeX7P1DS-VD",
+        "outputId": "98c6c102-8816-49b8-af59-837d7f303b45"
       }
     },
     {
@@ -404,12 +404,12 @@
           "end_time": "2024-01-02T02:05:15.778576Z",
           "start_time": "2024-01-02T02:05:15.743374Z"
         },
-        "id": "rD484gEPS-VF",
-        "outputId": "3de00968-f743-4144-cebd-a345731025d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "rD484gEPS-VF",
+        "outputId": "3de00968-f743-4144-cebd-a345731025d9"
       }
     },
     {
@@ -445,12 +445,12 @@
           "end_time": "2024-01-02T02:05:15.778899Z",
           "start_time": "2024-01-02T02:05:15.743572Z"
         },
-        "id": "XAYmnYHOS-VF",
-        "outputId": "7d1fec4a-3e7f-4196-9350-45b0b7e69a0a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 449
-        }
+        },
+        "id": "XAYmnYHOS-VF",
+        "outputId": "7d1fec4a-3e7f-4196-9350-45b0b7e69a0a"
       }
     },
     {
@@ -467,7 +467,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Ex. 2 Your Answer:reachable_nodes runs in O(n + m) time because it visits each node and edge once.\n"
+        "#### Ex. 2 Your Answer:reachable_nodes runs in O(n) time because it visits each node and edge once.\n"
       ],
       "metadata": {
         "collapsed": false,
@@ -544,12 +544,12 @@
           "end_time": "2024-01-02T02:05:15.779256Z",
           "start_time": "2024-01-02T02:05:15.743633Z"
         },
-        "id": "-UaPmj9YS-VH",
-        "outputId": "fbc2cf5a-9fda-464c-bb86-2c69efec86f1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "-UaPmj9YS-VH",
+        "outputId": "fbc2cf5a-9fda-464c-bb86-2c69efec86f1"
       }
     },
     {
@@ -642,12 +642,12 @@
           "end_time": "2024-01-02T02:05:15.779891Z",
           "start_time": "2024-01-02T02:05:15.743750Z"
         },
-        "id": "2z1PLtoZS-VJ",
-        "outputId": "24552f75-26b3-4196-c8b0-5cb000c2a808",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "2z1PLtoZS-VJ",
+        "outputId": "24552f75-26b3-4196-c8b0-5cb000c2a808"
       }
     },
     {
@@ -702,12 +702,12 @@
           "end_time": "2024-01-02T02:06:39.600304Z",
           "start_time": "2024-01-02T02:06:39.587196Z"
         },
-        "id": "3OAMY1JES-VK",
-        "outputId": "c4db73f3-652a-4cc0-cf09-c1b95cfa5252",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
-        }
+        },
+        "id": "3OAMY1JES-VK",
+        "outputId": "c4db73f3-652a-4cc0-cf09-c1b95cfa5252"
       }
     },
     {
