--- a/labs/lab04-graphs.ipynb
+++ b/labs/lab04-graphs.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "%matplotlib inline\n",
@@ -91,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "random.seed(6) # Comment this out to run randomized experiments"
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def all_pairs(objects):\n",
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def coin_toss(p=0.5):\n",
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def make_random_graph(n, p):\n",
@@ -225,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def reachable_nodes(graph, start):\n",
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [],
       "source": [
         "def is_connected(graph):\n",
@@ -320,7 +320,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -467,7 +467,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Ex. 2 Your Answer:reachable_nodes runs in O(n) time because it visits each node and edge once.\n"
+        "#### Ex. 2 Your Answer:reachable_nodes runs in O(n+m) time because it visits each node and edge once.\n"
       ],
       "metadata": {
         "collapsed": false,
@@ -499,7 +499,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +573,7 @@
       "metadata": {
         "id": "y0h8EV7jS-VI"
       },
-      "execution_count": 27
+      "execution_count": null
     },
     {
       "cell_type": "markdown",
@@ -614,7 +614,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +668,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
